--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,30 @@
-# Node.js
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+# Node modules
+/node_modules/
+
+# Build output
+/build/
+/dist/
+
+# Dependency directories
+/.pnp/
+/.pnp.js
 
 # Logs
-logs
-*.log
-*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDEs and editors
+/.idea/
+/.vscode/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
